--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "@angular/platform-browser": "^6.0.9",
     "@angular/platform-browser-dynamic": "^6.0.9",
     "@angular/router": "^6.0.9",
+    "angularfire2": "^5.0.0-rc.11",
     "core-js": "^2.4.1",
+    "firebase": "^5.3.0",
     "hammerjs": "^2.0.8",
     "rxjs": "^6.2.2",
     "rxjs-compat": "^6.2.2",
